--- a/ClientApp/src/app/modules/inward-material/outward-print/outward-print.component.html
+++ b/ClientApp/src/app/modules/inward-material/outward-print/outward-print.component.html
@@ -157,7 +157,7 @@
           background: transparent;
           font-size: 12px;
           line-height: 18px; vertical-align: top; text-align:right;width:13%">
-            {{tag.advanceAmount}} /-
+            {{tag.advanceAmount > 0 ? tag.advanceAmount : 0}} /-
           </td>
           <td style="padding: 5px 5px;
           background: transparent;
