acount statement ui design

--- a/ClientApp/src/app/shared/sidebar/sidebar.component.html
+++ b/ClientApp/src/app/shared/sidebar/sidebar.component.html
@@ -110,9 +110,14 @@
           <li class="nav-item">
             <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="reports/inward-report"
                routerLinkActive="active"><i class="fas fa-circle"></i> Inward Reports</a>
-          </li> <li class="nav-item">
+          </li> 
+          <li class="nav-item">
             <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="reports/client-outstanding-report"
                routerLinkActive="active"><i class="fas fa-circle"></i> Client O/S Reports</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="reports/account-statement"
+               routerLinkActive="active"><i class="fas fa-circle"></i>Account Statement</a>
           </li>
 
         </ul>
