--- a/ClientApp/src/app/modules/payment/lumpsum-print/lumpsum-print.component.html
+++ b/ClientApp/src/app/modules/payment/lumpsum-print/lumpsum-print.component.html
@@ -1,1 +1,157 @@
-<p>lumpsum-print works!</p>
+<!DOCTYPE html>
+<html lang="en" id="print-section">
+<head>
+  <meta charset="utf-8">
+  <title>Voucher</title>
+  <!--<link rel="stylesheet" href="style.css" media="all" />-->
+  <link href='https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap' rel='stylesheet' type='text/css'>
+
+  <style>
+    /* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap'); */
+
+    @media print {
+      body {
+        font-family: Arial, Helvetica, sans-serif !important;
+        font-family: 'Poppins', sans-serif !important;
+        padding: 0 !important;
+      }
+    }
+  </style>
+</head>
+<body style="padding: 0 0px;page-break-after:always; background: #fff; font-family: 'Poppins', sans-serif !important;">
+  <!--customer-copy-start-->
+
+  <div class="clearfix" style=" page-break-after:before; padding: 0px 0;
+  margin-bottom: 10px;
+  border: 0px solid #ccc;
+  margin-top: 10px;">
+    <div id="logo" style=" text-align: center;
+    margin-bottom: 10px;">
+      <table style="background:transparent; margin-bottom:0; width: 100%;">
+        <tr>
+          <td style="padding:0; width: 50%; background: transparent">
+            <h4 style="font-weight: 700;
+            font-size: 2.375rem;
+            letter-spacing: 3px;
+            color: #1c0f3a;
+            margin: 0;
+            text-align: left;font-family: 'Poppins', sans-serif !important;">
+              GOPAL
+            </h4>
+            <p style="font-size: 0.875rem;
+            line-height: 7px;
+            letter-spacing: 0.406rem;
+            text-transform: uppercase;
+            position: relative;
+            left: 3px;
+            color: #FF4081;
+            font-weight: 600;
+            margin: 0 0 10px 0;
+            text-align: left;">Computers</p>
+          </td>
+          <td style="padding:0; background: transparent; width: 50%; text-align: right;"></td>
+        </tr>
+      </table>
+    </div>
+    <div class="address" style=" border-top: 1px solid #C1CED9;
+    border-bottom: 1px solid #C1CED9;
+    margin: 0 0 0px 0;
+    padding: 7px;
+    background: #f5f5f5;">
+      <p style="margin:0; font-weight:500; font-size: 14px;">
+        Flat No 4, B Wing, Viththal Park, Samant Vadi, Near Ashok Stambh, Kashiba Medical Back side, Gangapur Road, Nashik - 422002.
+        <strong>Contact</strong>: 9867545678, 9867545678
+      </p>
+    </div>
+  </div>
+  <main>
+    <table class="bill-table" style=" background: transparent;
+    margin-bottom: 0;
+    border: 1px solid #ccc;
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    margin-bottom: 20px;">
+      <thead>
+        <tr>
+          <th style="text-align:center;   background: #F5F5F5;
+          color: #000;
+          border-bottom: 1px solid #C1CED9;
+          font-size: 16px;
+          white-space: nowrap;
+          font-weight: 600;padding: 8px 10px !important;">Cash Voucher</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td style=" padding: 7px;
+          background: transparent;
+          font-size: 13px;
+          line-height: 27px; vertical-align: top;">
+            <div id="project" style=" float: left; width:100%">
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;">
+                <span style=" color: #000;
+                text-align: left;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Voucher Date</span>: {{lumpsum.lumpsumDate  | date:'dd/MM/yyyy'}}
+              </div>
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;">
+                <span style=" color: #000;
+                text-align: left;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Voucher Number</span>: {{lumpsum.lumpsumId}}
+              </div>
+
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;">
+                <span style=" color: #000;
+                text-align: left;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Received From</span>: {{lumpsum.customerName}}
+              </div>
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;">
+                <span style=" color: #000;
+                text-align: left;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Received Amount</span>: {{lumpsum.paidAmount}} /-
+              </div>
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500; margin-top:50px;text-align: right">
+                <span style=" color: #000;
+                text-align: right;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Receiver Signature</span>
+              </div>
+              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500; text-align: right">
+                <span style=" color: #000;
+                text-align: right;
+                width: 160px;
+                margin-right: 10px;
+                display: inline-block;
+                font-weight: 600;">Receiver Name</span>: Gopal Shinde
+              </div>
+            </div>
+
+          </td>
+
+        </tr>
+      </tbody>
+    </table>
+  </main>
+
+  <!----->
+
+</body>
+</html>
+<div style="text-align: center; padding-bottom: 15px;">
+  <button printSectionId="print-section" (click)="printLumpsum()" class="btn btn-primary btn-sm">print</button>
+  <button class="btn btn-secondary" (click)="close()">Cancel</button>
+</div>
