Inware amount input hide

--- a/ClientApp/src/app/modules/reports/outward-report/outward-report.component.html
+++ b/ClientApp/src/app/modules/reports/outward-report/outward-report.component.html
@@ -23,7 +23,7 @@
                   </div>
                   <div class="col-sm">
                       <div class="form-group has-float-label">
-                          <input class="form-control" [ngModelOptions]="{standalone: true}" mask="0000000000" type="text" [(ngModel)]="searchModel.reportId" id="outwardNumber" placeholder="Outward Number">
+                          <input class="form-control" [ngModelOptions]="{standalone: true}"  type="text" [(ngModel)]="searchModel.reportId" id="outwardNumber" placeholder="Outward Number">
                           <label for="outwardNumber">Outward Number</label>
                       </div>
                   </div>
