--- a/ClientApp/src/app/modules/inward-material/add-inward/add-inward.component.html
+++ b/ClientApp/src/app/modules/inward-material/add-inward/add-inward.component.html
@@ -309,20 +309,27 @@
               </div>
               <div class="card-body pb-0 mb-0">
               <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                  <div class="form-group has-float-label" *ngIf="inward.isOutwardOrBillExist==false">
+                      <input class="form-control" type="number"  maxlength="17"  [ngModelOptions]="{standalone: true}"
+                      [(ngModel)]="inward.estmRepairingAmount"  id="estAmount" placeholder="Estimate Repearimg Amount">
+                      <label for="estAmount">Service Amount</label>
+                  </div>
+                  <div class="form-group has-float-label" *ngIf="inward.isOutwardOrBillExist==true">
+                     <label for="estAmount">Service Amount : {{inward.estmRepairingAmount}}</label>
+                </div>
+              </div>
                   <div class="col-12 col-md-6 col-lg-4">
-                      <div class="form-group has-float-label">
-                          <input class="form-control" type="text"  [ngModelOptions]="{standalone: true}"
-                          [(ngModel)]="inward.advanceAmount" mask="0*.00" maxlength="17"  id="advAmount" placeholder="Advance Amount">
+                      <div class="form-group has-float-label"  *ngIf="inward.isOutwardOrBillExist==false">
+                          <input class="form-control" type="number"   [ngModelOptions]="{standalone: true}"
+                          [(ngModel)]="inward.advanceAmount"  maxlength="17"  id="advAmount" placeholder="Advance Amount">
                           <label for="advAmount">Advance Amount</label>
                       </div>
+                      <div class="form-group has-float-label"  *ngIf="inward.isOutwardOrBillExist==true">
+                        <label for="advAmount">Advance Amount : {{inward.advanceAmount}}</label>
+                    </div>
                   </div>
-                  <div class="col-12 col-md-6 col-lg-4">
-                      <div class="form-group has-float-label">
-                          <input class="form-control" type="text" mask="0*.00" maxlength="17"  [ngModelOptions]="{standalone: true}"
-                          [(ngModel)]="inward.estmRepairingAmount"  id="estAmount" placeholder="Estimate Repearimg Amount">
-                          <label for="estAmount">Service Amount</label>
-                      </div>
-                  </div>
+
                   <!-- <div class="col-12 col-md-4 col-lg-4">
                       <div class="form-group">
                           <span class="plain-select">
