--- a/ClientApp/src/app/modules/payment/lumpsum-print/lumpsum-print.component.html
+++ b/ClientApp/src/app/modules/payment/lumpsum-print/lumpsum-print.component.html
@@ -152,6 +152,6 @@
 </body>
 </html>
 <div style="text-align: center; padding-bottom: 15px;">
-  <button printSectionId="print-section" (click)="printLumpsum()" class="btn btn-primary btn-sm">print</button>
+  <button printSectionId="print-section" (click)="getBase64EncodedImage()" class="btn btn-primary btn-sm">print</button>
   <button class="btn btn-secondary" (click)="close()">Cancel</button>
 </div>
