--- a/ClientApp/src/app/modules/reports/outward-report/outward-report.component.html
+++ b/ClientApp/src/app/modules/reports/outward-report/outward-report.component.html
@@ -72,32 +72,31 @@
               <!-- This id used for responsive table -->
               <table class="table table-striped" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                   <thead>
-                      <tr>
+                    <tr>
                         <th scope="col" style="width:5%" class="cursor"></th>
-                            <th scope="col" style="width:10%" class="cursor">
-                              <div class="d-flex align-items-center"><span>Outward Date</span> </div>
+                          <th scope="col" style="width:10%" class="cursor">
+                            Outward Date
                           </th>
                           <th scope="col" style="width:10%" class="cursor">
-                            <div class="d-flex align-items-center"><span>Outward #</span>
-                            </div>
-                        </th>
+                            Outward #
+                          </th>
+                          <th scope="col" style="width:10%" class="cursor">
+                             Job #
+                          </th>
                           <th scope="col" style="width:15%" class="cursor">
-                              <div class="d-flex align-items-center"><span>Job #</span> </div>
-                          </th>
-                          <th scope="col" style="width:10%" class="cursor">
-                            <div class="d-flex align-items-center"><span>Client Name</span> </div>
+                           Client Name
                         </th>
                           <th scope="col" style="width:15%" class="text-right">
-                            Service Amount
+                           <div class="mr-2"> Service ₹</div>
                           </th>
                           <th scope="col" style="width:10%" class="text-right">
-                              Advance Amount
+                              <div class="mr-2"> Advance ₹</div>
                           </th>
                           <th scope="col" style="width:10%" class="text-right">
-                              Paid Amount
+                              <div class="mr-2"> Paid ₹</div>
                           </th>
                           <th scope="col" style="width:15%" class="text-right">
-                              O/S Amount
+                              <div class="mr-2"> O/S ₹</div>
                           </th>
                       </tr>
                   </thead>
