--- a/ClientApp/src/app/modules/inward-material/bill-print/bill-print.component.html
+++ b/ClientApp/src/app/modules/inward-material/bill-print/bill-print.component.html
@@ -20,7 +20,7 @@
 </head>
 <body style="padding: 0 0px;page-break-after:always; background: #fff; font-family: 'Poppins', sans-serif !important;">
   <!--customer-copy-start-->
-  <main style="width:780px; margin-left:auto; margin-right:auto">
+  <main style="width:100%; margin-left:auto; margin-right:auto">
     <div class="clearfix" style=" page-break-after:before; padding: 0px 0;
   margin-bottom: 10px;
   border: 0px solid #ccc;
@@ -75,16 +75,16 @@
           line-height: 18px; vertical-align: top; text-align:left">
             <table style="width: 100%;">
               <tr>
-                <td style="width:30%"><strong>Customer Name:</strong></td>
-                <td>{{bill.customerName}}</td>
+                <td style="width:30%; padding:5px 0 !important;"><strong>Customer Name:</strong></td>
+                <td style="padding:5px 0 !important;">{{bill.customerName}}</td>
               </tr>
               <tr>
-                <td style="width:30%"><strong>Customer Address:</strong></td>
-                <td>{{bill.customerAddress}}</td>
+                <td style="width:30%; padding:5px 0 !important;"><strong>Customer Address:</strong></td>
+                <td style="padding:5px 0 !important;">{{bill.customerAddress}}</td>
               </tr>
               <tr>
-                <td><strong>GST #:</strong></td>
-                <td>{{bill.gstNo}}</td>
+                <td style="padding:5px 0 !important;"><strong>GST #:</strong></td>
+                <td style="padding:5px 0 !important;">{{bill.gstNo}}</td>
               </tr>
             </table>
 
@@ -96,12 +96,12 @@
           line-height: 18px; vertical-align: top; text-align:left">
             <table style="width: 100%;">
               <tr>
-                <td style="width:30%"><strong>Bill #:</strong></td>
-                <td>{{bill.billId}}</td>
+                <td style="width:30%; padding:5px 0 !important;"><strong>Bill #:</strong></td>
+                <td style="padding:5px 0 !important;">{{bill.billId}}</td>
               </tr>
               <tr>
-                <td><strong>Date:</strong></td>
-                <td>{{bill.billDate  | date:'dd/MM/yyyy'}}</td>
+                <td style="padding:5px 0 !important;"><strong>Date:</strong></td>
+                <td style="padding:5px 0 !important;">{{bill.billDate  | date:'dd/MM/yyyy'}}</td>
               </tr>
             </table>
           </td>
@@ -112,24 +112,24 @@
           <th style="padding: 5px 5px;
           background: #f5f5f5;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left">Job No.</th>
+          line-height: 18px; vertical-align: top; text-align:left; width: 15%;">Job No.</th>
           <th style="padding: 5px 5px;
           background: #f5f5f5;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left">Material Name</th>
+          line-height: 18px; vertical-align: top; text-align:left; width: 35%;">Material Name</th>
 
           <th style="padding: 5px 5px;
           background: #f5f5f5;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left">Serial No</th>
+          line-height: 18px; vertical-align: top; text-align:left; width: 20%;">Serial No</th>
           <th style="padding: 5px 5px;
           background: #f5f5f5;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left">Advance ₹</th>
+          line-height: 18px; vertical-align: top; text-align:right; width: 15%;">Advance ₹</th>
           <th style="padding: 5px 5px;
           background: #f5f5f5;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left">Service ₹</th>
+          line-height: 18px; vertical-align: top; text-align:right; width: 15%;">Service ₹</th>
         </tr>
       </thead>
       <tbody>
@@ -137,32 +137,32 @@
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left; width:13%">
+          line-height: 18px; vertical-align: top; text-align:left;">
             {{tag.searchValue.substr(0,tag.searchValue.indexOf(' '))}}
           </td>
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left;width:48%">
+          line-height: 18px; vertical-align: top; text-align:left;">
             {{tag.modelNo}}, {{tag.materialType}}, {{tag.companyName}}
           </td>
 
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left;width:13%">
+          line-height: 18px; vertical-align: top; text-align:left;">
             {{tag.serialNo}}
           </td>
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:right;width:13%">
+          line-height: 18px; vertical-align: top; text-align:right;">
             {{tag.advanceAmount > 0 ? tag.advanceAmount : 0}} /-
           </td>
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:right;width:13%">
+          line-height: 18px; vertical-align: top; text-align:right;">
             {{tag.serviceAmount}} /-
           </td>
         </tr>
@@ -172,26 +172,26 @@
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left; width:13%; border:0"></td>
+          line-height: 18px; vertical-align: top; text-align:left; border:0"></td>
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left;width:48%; border:0"></td>
+          line-height: 18px; vertical-align: top; text-align:left; border:0"></td>
 
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left;width:13%; border:0"></td>
+          line-height: 18px; vertical-align: top; text-align:left; border:0"></td>
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left;width:13%">
+          line-height: 18px; vertical-align: top; text-align:left;">
             <strong>Outstanding ₹</strong>
           </td>
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:right;width:13%">
+          line-height: 18px; vertical-align: top; text-align:right;">
             {{bill.outstandingAmount}} /-
           </td>
         </tr>
@@ -199,26 +199,26 @@
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left; width:13%; border:0"></td>
+          line-height: 18px; vertical-align: top; text-align:left; border:0"></td>
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left;width:48%; border:0"></td>
+          line-height: 18px; vertical-align: top; text-align:left; border:0"></td>
 
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left;width:13%; border:0"></td>
+          line-height: 18px; vertical-align: top; text-align:left; border:0"></td>
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left;width:13%">
+          line-height: 18px; vertical-align: top; text-align:left;">
             <strong>Paid ₹</strong>
           </td>
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:right;width:13%">
+          line-height: 18px; vertical-align: top; text-align:right;">
             {{bill.paidImmediatlyAmount}} /-
           </td>
         </tr>
@@ -226,26 +226,26 @@
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left; width:13%;border:0"></td>
+          line-height: 18px; vertical-align: top; text-align:left; border:0"></td>
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left;width:48%;border:0"></td>
+          line-height: 18px; vertical-align: top; text-align:left;border:0"></td>
 
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left;width:13%;border:0"></td>
+          line-height: 18px; vertical-align: top; text-align:left;border:0"></td>
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left;width:13%">
+          line-height: 18px; vertical-align: top; text-align:left;">
             <strong>Total ₹</strong>
           </td>
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:right;width:13%">
+          line-height: 18px; vertical-align: top; text-align:right;">
             {{getTotalSum()}} /-
           </td>
         </tr>
@@ -259,10 +259,10 @@
     </div>
     <table style="margin-top:60px; margin-bottom:10px; width: 100%;border-collapse: collapse;">
       <tr>
-        <td style="padding:0px; text-align:left;font-size: 13px;">
+        <td style="padding:0px !important; text-align:left;font-size: 13px;">
           <strong>Customer Signature</strong>
         </td>
-        <td style="padding:0; text-align:right;font-size: 13px;">
+        <td style="padding:0px !important; text-align:right;font-size: 13px;">
           <strong>Authorized Signature</strong>
         </td>
       </tr>
