--- a/ClientApp/src/assets/scss/components/_side-nav.scss
+++ b/ClientApp/src/assets/scss/components/_side-nav.scss
@@ -9,7 +9,6 @@
   bottom: 0px;
   left: 0;
   position: fixed;
-  overflow: hidden;
   transition: all 0.2s ease-in-out;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -18,6 +17,8 @@
   .side-nav-inner {
     position: relative;
     height: 100%;
+    overflow-y: auto;
+    padding-bottom: 2rem;
     .side-nav-menu {
       >.nav-item {
         border-bottom: 1px solid #3c494e;
